// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewing 1 expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $0.03
</h1>
`;

exports[`viewing 2 expense 1`] = `
<h1>
  Viewing 
  2
   
  expenses
   totalling 
  $0.17
</h1>
`;
